# bintools

./: package-lock.json  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tauri_cmd.rs
src-tauri/src/utils/: bilibili_live_utils.rs  bollard_utils.rs  default_utils.rs  douyin_live_utils.rs  edge_tts_utils.rs  fantoccini_utils.rs  gpt_sovits_utils.rs  minecraft_live_utlis.rs  mod.rs
src-tauri/src/utils/protobuf/: douyin.rs  mod.rs
src-tauri/tests/: test.rs
src/components/: Chat.vue  ChatApi.vue  DockerLog.vue  GptSovits.vue  ShowDatabase.vue
src/stores/: useSettingStore.ts
src/utils/: azureTtsUtils.ts  bilibiliLiveUtils.ts  dbUtils.ts  defaultUtils.ts  gptSovitsUtils.ts  novelUtils.ts  ytdlpUitls.ts
src/views/mclive/: mclive.html  mclive.vue
src/views/novel/: divNovel.vue  novel.html  novel.ts  novel.vue  upload.vue  video.vue
src/views/setting/: azureTts.vue  edgeTts.vue  setting.html  setting.ts  setting.vue
